kubernetes/infrastructure/monitoring/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - grafana.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - prometheus.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - alertmanager.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
